# Project1-ColorTextureShape

./: .gitignore  CMakeLists.txt  OpenCVTest.cpp  README.md  Test.cpp
Doc/: Color histogram output1.txt  Color histogram output2.txt  Color histogram report v2.docx  Color histogram report.docx  Design Notes: Distance and Similarity  Design Notes: Histograms  Distance Measures Report.docx  Project1Design.uxf  Project1Report.docx  Task List
Source/: CMakeLists.txt  Test.cpp  main.cpp
Source/Distance/: CMakeLists.txt  ChiSquareDistance.cpp  ChiSquareDistance.hpp  Distance.hpp  KLDistance.cpp  KLDistance.hpp  L1Distance.cpp  L1Distance.hpp  L2Distance.cpp  L2Distance.hpp
Source/Feature/: CMakeLists.txt  ColorCorrelogram.cpp  ColorCorrelogram.hpp  ColorHistogram.cpp  ColorHistogram.hpp  ColorQuantizationRGB.cpp  ColorQuantizationRGB.hpp  HistogramFeature.hpp  HistogramOfOrientedGradients.cpp  HistogramOfOrientedGradients.hpp  LocalBinaryPattern.cpp  LocalBinaryPattern.hpp
Source/Similarity/: CMakeLists.txt  CosineSimilarity.cpp  CosineSimilarity.hpp  HistogramIntersection.cpp  HistogramIntersection.hpp  Similarity.hpp
Source/Util/: CMakeLists.txt  ColorQuantizationBGR.cpp  ColorQuantizationBGR.hpp  Convolve.cpp  Convolve.hpp
